--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,61 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.fullcontact</groupId>
+    <groupId>com.w2ogroup.vintank.support</groupId>
     <artifactId>fullcontact4j</artifactId>
     <name>FullContact Java Bindings</name>
-    <version>3.0.0</version>
+    <version>3.0.1</version>
+
+	<properties>
+		<!-- dependency versions -->
+		<jvm.version>1.7</jvm.version>
+	</properties>
+    
+	<distributionManagement>
+		<repository>
+			<id>nexus-w2o</id>
+			<name>W2O Releases</name>
+			<url>https://nexus.w2oservices.com/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>nexus-w2o</id>
+			<name>W2O Snapshots</name>
+			<url>https://nexus.w2oservices.com/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+        			<version>3.0</version>
+					<configuration>
+						<source>${jvm.version}</source>
+						<target>${jvm.version}</target>
+						<meminitial>256m</meminitial>
+						<maxmem>512m</maxmem>
+					</configuration>
+		        </plugin>
+			</plugins>
+		</pluginManagement>
+
+		<plugins>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${jvm.version}</source>
+					<target>${jvm.version}</target>
+					<meminitial>256m</meminitial>
+					<maxmem>512m</maxmem>
+				</configuration>
+			</plugin>
+			
+		</plugins>
+	</build>
+
     <dependencies>
 
         <dependency>
@@ -29,7 +80,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.4.3</version>
+            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp</groupId>
@@ -44,17 +95,10 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.2</version>
+            <version>1.8</version>
         </dependency>
 
 
     </dependencies>
 
-    <distributionManagement>
-        <!-- credential config is in settings.xml -->
-        <repository>
-            <id>bintray-fullcontact-fullcontact-oss-fullcontact4j</id>
-            <url>https://api.bintray.com/maven/fullcontact/fullcontact-oss/fullcontact4j/;publish=1</url>
-        </repository>
-    </distributionManagement>
 </project>
